TPLKEENLY-170 #resolve Big menu on height auto on mobile view.

--- a/code/less/template-responsive.less
+++ b/code/less/template-responsive.less
@@ -745,6 +745,7 @@
 @media (max-width: 767px) {
     .total-menu-wrapper {
         position: absolute;
+        height: auto;
         .total-menu-container {
             .menu-items {
                 display: none;
@@ -752,10 +753,12 @@
             .submenu-items {
                 width: 100%;
                 background-color: @color-two;
+                display: inherit;
                 .wrapper-submenu-items {
                     padding-left: 0;
                     margin-top: 75px;
                     margin-bottom: 40px;
+                    width: 100%;
                     .submenu {
                         >li {
                             margin-bottom: 0;
@@ -794,6 +797,7 @@
                     }
                     &.deeper {
                         > a {
+                            margin-bottom: 0;
                             .caret {
                                 display: none;
                             }
@@ -806,6 +810,7 @@
                     }
                     .submenu {
                         margin-bottom: 15px;
+                        margin-top: 15px;
                         margin-left: 0;
                         margin-right: 0;
                         background-color: @color-one;
