--- a/code/less/template.less
+++ b/code/less/template.less
@@ -1760,6 +1760,7 @@ body {
 }
 // Total menus
 .moduletable_ktotalmenu {
+    width: 100%;
     display: table;
     h3 {
         display: none;
@@ -1926,10 +1927,7 @@ body {
                 text-transform: uppercase;
                 color: @color-five;
                 font-size: @baseFontSize + 2;
-                display: table;
-                left: 0;
-                right: 0;
-                margin: 0px auto;
+                width: 100%;
                 .btn {
                     border-color: @color-five;
                     color: @color-five;
